--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
-    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.defaultEnvManager": "ms-python.python:venv",
     "python-envs.pythonProjects": [],
     //"python-envs.defaultEnvManager": "ms-python.python:system",
     //"python-envs.pythonProjects": []
